fix scrollbar not being displayed in workspace area

--- a/src/client/src/ui/regions/views/workspace/workspaceItemContainer.scss
+++ b/src/client/src/ui/regions/views/workspace/workspaceItemContainer.scss
@@ -1,4 +1,5 @@
 .workspace-region {
+  width: calc(100% - 10px);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
